<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/main_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/main_welcome"
        android:textAlignment="center"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="bottom|center"
            android:inputType="textPersonName"
            android:text="@string/main_login_text" />

        <Button
            android:id="@+id/main_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_login_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="bottom|center"
            android:inputType="textPersonName"
            android:text="@string/main_register_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/main_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_register_button" />

    </LinearLayout>

</LinearLayout>