<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="io.forus.kindpakket.android.kindpakket.view.voucher.VoucherProcessActivity">

    <TextView
        android:id="@+id/voucher_process_budget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/voucher_process_vertical_spacing"
        android:layout_marginBottom="@dimen/voucher_process_vertical_spacing"
        android:gravity="center"
        android:text="@string/voucher_process_budget_text"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/voucher_process_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/voucher_process_vertical_spacing"
        android:layout_marginBottom="@dimen/voucher_process_vertical_spacing"
        android:gravity="center"
        android:text="@string/voucher_process_budget"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/voucher_process_use_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/voucher_process_vertical_spacing"
        android:layout_marginBottom="@dimen/voucher_process_vertical_spacing"
        android:gravity="center"
        android:text="@string/voucher_process_use_text"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/voucher_process_vertical_spacing"
        android:layout_marginBottom="@dimen/voucher_process_vertical_spacing"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/voucher_process_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voucher_process_currency" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/voucher_process_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/voucher_process_amount_default"
                android:textAlignment="center" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/voucher_process_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voucher_process_button" />
    </LinearLayout>
</LinearLayout>
