<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="io.forus.kindpakket.android.kindpakket.view.voucher.VoucherReadActivity">

    <TextView
        android:id="@+id/voucher_read_voucher_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/voucher_read_voucher_text" />

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">

            <EditText
                android:id="@+id/voucher_read_voucher_code_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/voucher_read_voucher_code_field"
                android:inputType="textPersonName"
                android:textAlignment="center" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/voucher_read_scanner_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_barcode_2"
            android:drawableStart="@drawable/ic_action_barcode_2"
            android:text="@string/voucher_read_scanner_button" />

        <Button
            android:id="@+id/voucher_read_voucher_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:text="@string/voucher_read_voucher_button" />

    </LinearLayout>

</LinearLayout>
